force-app/main/default/objects/Operations_Contact__c/Operations_Contact__c.object-meta.xml
<CustomObject>
    <label>Operations Contact</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>OCID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>