force-app/main/default/objects/Operations_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operations Contacts</relationshipLabel>
    <relationshipName>Operations_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>