force-app/main/default/objects/Operations_Contact__c/fields/Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_Phone__c</fullName>
    <formula>Contact__r.Direct_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Phone</label>
    <type>Text</type>
</CustomField>