force-app/main/default/objects/Operations_Contact__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>IF(Contact__r.Inactive__c==TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Inactive?</label>
    <type>Text</type>
</CustomField>