force-app/main/default/objects/Operations_Contact__c/fields/Operations_Area__c.field-meta.xml
<CustomField>
    <fullName>Operations_Area__c</fullName>
    <label>Operations Area</label>
    <referenceTo>Operational_Data__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Operations_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>