force-app/main/default/objects/Operations_Contact__c/fields/Operations_Role__c.field-meta.xml
<CustomField>
    <fullName>Operations_Role__c</fullName>
    <label>Operations Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Billing Clerk</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Dispatcher 1st Shift</fullName>
            </value>
            <value>
                <fullName>Dispatcher 2nd Shift</fullName>
            </value>
            <value>
                <fullName>Distribution Manager</fullName>
            </value>
            <value>
                <fullName>Distribution Supervisor</fullName>
            </value>
            <value>
                <fullName>Distribution Supervisor 1st Shift</fullName>
            </value>
            <value>
                <fullName>Distribution Supervisor 2nd Shift</fullName>
            </value>
            <value>
                <fullName>Distribution Supervisor 3rd Shift</fullName>
            </value>
            <value>
                <fullName>Distribution Supervisor Night Shift</fullName>
            </value>
            <value>
                <fullName>Division Liaison</fullName>
            </value>
            <value>
                <fullName>General Manager (GM)</fullName>
            </value>
            <value>
                <fullName>Inventory Control Coordinator</fullName>
            </value>
            <value>
                <fullName>Inventory Control Supervisor</fullName>
            </value>
            <value>
                <fullName>Logistics Manager</fullName>
            </value>
            <value>
                <fullName>Operations Clerk</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Receiving Contact</fullName>
            </value>
            <value>
                <fullName>Regional Operations Leader</fullName>
            </value>
            <value>
                <fullName>Sales Admin</fullName>
            </value>
            <value>
                <fullName>Sample Dept. Contact</fullName>
            </value>
            <value>
                <fullName>Transportation Coordinator</fullName>
            </value>
            <value>
                <fullName>Transportation Supervisor</fullName>
            </value>
            <value>
                <fullName>Transportation Supervisor 1st Shift</fullName>
            </value>
            <value>
                <fullName>Transportation Supervisor 2nd Shift</fullName>
            </value>
            <value>
                <fullName>Warehouse Admin</fullName>
            </value>
            <value>
                <fullName>Warehouse Coordinator</fullName>
            </value>
            <value>
                <fullName>Warehouse Supervisor 1st Shift</fullName>
            </value>
            <value>
                <fullName>Warehouse Supervisor 2nd Shift</fullName>
            </value>
            <value>
                <fullName>Wave Planner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>