force-app/main/default/objects/Operations_Contact__c/fields/TM_s_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>TM_s_Contact_Info__c</fullName>
    <formula>Contact__r.ReportsTo.Phone + &quot; - &quot; + Contact__r.ReportsTo.Email</formula>
    <label>TM&apos;s Contact Info</label>
    <type>Text</type>
</CustomField>