force-app/main/default/objects/Operations_Contact__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Phone</label>
    <type>Text</type>
</CustomField>